tests/snapshots/sync__enabling_pages_reads_the_way_it_should.snap
---
source: tests/sync.rs
expression: output.stdout
---
Plan for o/r

Pages
  + enable GitHub Pages
      build_type: workflow
      https_enforced: true

1 to create.
