tests/snapshots/sync__plan_renders_field_level_changes_when_verbose.snap
---
source: tests/sync.rs
expression: output.stdout
---
Plan for o/r

Labels
  ~ update label bug
      color: d73a4a → ff0000
      description: Something isn't working → Broken

1 to update.
