tests/snapshots/sync__plan_renders_pending_changes.snap
---
source: tests/sync.rs
expression: output.stdout
---
Plan for o/r

Labels
  + create label feature

1 to create.
