tests/snapshots/sync__sync_refuses_to_start_when_the_token_certainly_cannot_write.snap
---
source: tests/sync.rs
expression: output.stderr
---
Refusing to start: this token cannot make some of these changes.

  ✘ Repository   missing the `repo` scope

Nothing was changed. Run `gh settings doctor` for the full picture.
