tests/snapshots/sync__the_pages_plan_reads_the_way_it_should.snap
---
source: tests/sync.rs
expression: output.stdout
---
Plan for o/r

Pages
  ~ update pages (2 fields)
      source: gh-pages:/ → gh-pages:/docs
      cname: docs.example.com → new.example.com

1 to update.
